[package]
name = "rustables"
version = "0.8.1"
authors = ["lafleur@boum.org", "Simon Thoby", "Mullvad VPN"]
license = "GPL-3.0-or-later"
description = "Safe abstraction for libnftnl. Provides low-level userspace access to the in-kernel nf_tables subsystem"
repository = "https://gitlab.com/rustwall/rustables"
readme = "README.md"
keywords = ["nftables", "nft", "firewall", "iptables", "netfilter"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
resolver = "2"
edition = "2021"

[features]

[dependencies]
bitflags = "1.0"
thiserror = "1.0"
log = "0.4"
libc = "0.2.43"
nix = "0.23"
ipnetwork = { version = "0.20", default-features = false }
rustables-macros = { path = "macros", version = "0.1.1-alpha1" }

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
bindgen = "0.68"
regex = "1.10"
