[package]
name = "rustables-macros"
version = "0.1.1"
description = "Internal macros for generation netlink structures for the rustables project"

authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
once_cell = "1.1"
proc-macro2-diagnostics = "0.10"
