[package]
name = "rustables-sys"
version = "0.7.0"
authors = ["lafleur@boum.org, Simon Thoby, Mullvad VPN"]
license = "GPL-3.0-or-later"
description = "Low level FFI bindings to libnftnl. Provides low-level userspace access to the in-kernel nf_tables subsystem"
repository = "https://gitlab.com/rustwall/rustables"
readme = "README.md"
keywords = ["nftables", "nft", "firewall", "iptables", "netfilter"]
categories = ["network-programming", "os::unix-apis", "external-ffi-bindings", "no-std"]
edition = "2018"


[features]
nftnl-1-0-7 = []
nftnl-1-0-8 = ["nftnl-1-0-7"]
nftnl-1-0-9 = ["nftnl-1-0-8"]
nftnl-1-1-0 = ["nftnl-1-0-9"]
nftnl-1-1-1 = ["nftnl-1-1-0"]
nftnl-1-1-2 = ["nftnl-1-1-1"]
nftnl-1-2-0 = ["nftnl-1-1-2"]
default = ["nftnl-1-2-0"]

[dependencies]
cfg-if = "1.0"
libc = "0.2.43"

[build-dependencies]
cfg-if = "1.0"
pkg-config = "0.3"
